--- a/Src/CSharpParser/CSharpParser.csproj
+++ b/Src/CSharpParser/CSharpParser.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.cs" />
+    <Compile Include="CS.cs" />
     <Compile Include="ParserBase.cs" />
     <Compile Include="Diagnostics.cs" />
     <Compile Include="Extensions.cs" />
